<resources>
    <string name="app_name">YujiaJI-score</string>
    <string name="vs">VS</string>
    <string name="team_a">Buffalo Bills</string>
    <string name="team_b">Detroit Lions</string>
    <string name="teamA">Buffalo Bills</string>
    <string name="teamB">Detroit Lions</string>
    <string name="insButton">+</string>
    <string name="desButton">-</string>
    <string name="gameTitle">Game:</string>
    <string name="amountTitle">Amount:</string>
    <string name="scoreTitle">Score:</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="scoreChangeText">00</string>
    <string name="gameName">game name</string>
    <string name="_00">00</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">about</string>
</resources>