<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--score layout-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/scoreAText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/scoreA"
            android:textSize="76sp" />

        <TextView
            android:id="@+id/scoreBText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/scoreB"
            android:textSize="76sp" />
    </LinearLayout>
    <!--team name layout-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/nameA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teamA"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vsText"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vs"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nameB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teamB"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--team choose layout-->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:paddingHorizontal="30dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp">
            <Button
                android:id="@+id/teamAbut"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="#7B7B7B"
                android:text="@string/team_a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/teamBbut"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="#7B7B7B"
                android:text="@string/team_b"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <!--team radio choose layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp">

            <RadioGroup
                android:id="@+id/chooseTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/chooseA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginEnd="65dp"/>

                <RadioButton
                    android:id="@+id/chooseB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp" />

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
    <!--game,score amount,sore changes layout-->
    <LinearLayout
        android:id="@+id/chooseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">
        <!--game title layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/GameTitle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/gameTitle"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/gameName"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            android:text="@string/gameName" />
        </LinearLayout>
        <!--game choose-->
        <Spinner
            android:id="@+id/gameSpin"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:entries="@array/games"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />
        <!--score amount title-->
        <TextView
            android:id="@+id/AmountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/amountTitle"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--score amount choose-->
        <Spinner
            android:id="@+id/amountSpin"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:entries="@array/scoreAmount"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />
        <!--score buttons layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/scoreTitle"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--increase and decrease buttons layout-->
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/desButton"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desButton"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/scoreChangeText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/scoreChangeText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/insButton"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insButton"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>